bmx-billing-report-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bmx-billing-report-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bmx-billing-report
    spec:
      containers:
      - name: bmx-billing-report
        image: registry.ng.bluemix.net/jonhall/bmxbillingreport:latest
        ports:
        - containerPort: 5000
