bmx-billing-report-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmx-billing-report-service
spec:
  selector:
    app: bmx-billing-report
  ports:
    - protocol: TCP
      port: 5000
